# python-pkg

./: .gitignore  README.md  pyproject.toml
hooks/: pkg.py
pkg/: __init__.py  environment.py  package.py  pypi.py  registry.py
tests/: __init__.py  test_imports.py
